= HEAD

* Make halt plugin integrate with symbol_views, json, and similar plugins (jeremyevans)

* Add padrino_render plugin, adding render/partial methods that work similar to Padrino (jeremyevans)

* Add Roda#render_template private method for template rendering, for use by plugins (jeremyevans)

* Make Roda#initialize take env hash, #call take route_block, remove private #_route (jeremyevans)

* Remove keep_remaining_path/update_remaining_path private request methods (jeremyevans)

* Don't modify SCRIPT_NAME/PATH_INFO during routing, merging static_path_info plugin into core (jeremyevans)

* Remove code deprecated in Roda 1.3.0 (jeremyevans)

= 1.3.0 (2015-01-13)

* Make static_path_info plugin restore original SCRIPT_NAME/PATH_INFO before returning from r.run (jeremyevans)

* Add RodaMajorVersion, RodaMinorVersion, and RodaPatchVersion (jeremyevans)

* Add delete_empty_headers plugin for deleting response headers that are empty before return response (jeremyevans)

* Make freeze class method freeze internal data structures to avoid thread safety issues (jeremyevans)

* Deprecate mutating plugin option hashes for chunked, default_headers, error_email, json, and render plugins (jeremyevans)

* Fix subclassing app and using r.multi_run in subclass in multi_run plugin (jeremyevans)

* Support :classes option in json plugin to set the classes to use (jeremyevans)

* Improve performance in default_headers plugin by not duping the headers (jeremyevans)

* Use :template_opts instead of :opts for providing options to the template in the render plugin (jeremyevans)

* Support :match_header_yield Roda option in the header_matchers plugin, causing the :header match to yield the value (jeremyevans)

* Move :param and :param! hash matchers to the param_matchers plugin (jeremyevans)

* Add path_matchers plugin, for :extension, :prefix, and :suffix hash matchers (jeremyevans)

* Move Roda.hash_matcher to hash_matcher plugin (jeremyevans)
