@@ -1,5 +1,7 @@
 = HEAD
 
+* Make error_handler plugin rescue SyntaxError in addition to StandardError (jeremyevans)
+
 * Make halt plugin integrate with symbol_views, json, and similar plugins (jeremyevans)
 
 * Add padrino_render plugin, adding render/partial methods that work similar to Padrino (jeremyevans)
